获取App详细信息页面完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
         <activity
             android:name=".biz.buildslist.BuildsListActivity"
             android:label="获取App所有版本" />
+        <activity
+            android:name=".biz.detail.AppDetailActivity"
+            android:label="获取App详细信息" />
     </application>
 
 </manifest>
