--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,10 @@ dependencies {
 
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.42'
 
-    //glide
+    // glide
     api 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+    // zxing
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
 }
